ftp+nat/gateway/rules.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [6:402]
:POSTROUTING ACCEPT [6:402]


-A PREROUTING  -m tcp -p tcp --dport 21 -j LOG --log-prefix "[PREROUTING] "
-A PREROUTING -i enp0s3 -p tcp -m tcp --dport 21 -j DNAT --to-destination 172.16.5.2
-A PREROUTING -i enp0s3 -p tcp -m tcp --match multiport --dports 50000:50200  -j DNAT --to-destination 172.16.5.2

#-A POSTROUTING -s 172.16.5.2/24 -o enp0s3 -p tcp -m tcp -j SNAT --to-source 172.16.100.31

-A OUTPUT  -m tcp -p tcp --dport 21 -j LOG
-A OUTPUT  -d 172.16.100.31/32 -p tcp -m tcp --dport 21 -j DNAT --to-destination 172.16.5.2:21

COMMIT





# Completed on Sun Jun  8 14:24:59 2025
# Generated by iptables-save v1.8.9 on Sun Jun  8 14:24:59 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [24:1608]
-A INPUT -p icmp -j LOG
-A INPUT -p icmp -j ACCEPT

-A INPUT -p tcp --dport 21 -m conntrack --ctstate NEW   -j LOG --log-prefix "[INPUT] "

-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j DROP


-A FORWARD -p tcp  --dport 21   -m conntrack --ctstate NEW   -j LOG   --log-prefix "[FORWARD] "
-A FORWARD -p tcp -m tcp --dport 21 -j ACCEPT
-A FORWARD -p tcp -m tcp -m multiport --dports 50000:50200 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j DROP


-A OUTPUT  -p tcp  --dport 21  -m conntrack --ctstate NEW    -j LOG   --log-prefix "[OUTPUT] "
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
